--- a/report_py3o/views/ir_report.xml
+++ b/report_py3o/views/ir_report.xml
@@ -19,6 +19,13 @@
                         <field name="py3o_is_local_fusion"/>
                         <field name="py3o_server_id" />
                         <field name="py3o_template_id" />
+
+                        <!-- string: Rename to take out "py3o" (redundant) from the label. -->
+                        <!-- context: Only show keys, not values of available config-params. -->
+                        <field name="py3o_config_param_ids" widget="many2many_tags"
+                            string="Available configuration parameters"
+                            context="{'tree_view_ref': 'report_py3o.py3o_config_param_form'}" />
+
                         <field name="module" />
                         <field name="py3o_template_fallback" />
                     </group>
